A few more fixes plus a little more clarity for other actions
Added a icon for dice rolls since those are distinct normally, that icon also seems to apply to bottle spins so added bonus.
Also made sure that the /me change (including names in the act) applies to bottle and dice.
Added an icon for warns, should help when themes are a little messed up and make them that tiny bit more distinct.
Fixed ads being unexpandable in modern.
Made UserView bbcode not get modified by modern other than in the header.

--- a/scss/_chat.scss
+++ b/scss/_chat.scss
@@ -412,6 +412,9 @@
     gap: 8px;
     padding: 4px 4px;
     position: relative;
+    .expanded {
+      max-height: none;
+    }
     .message-avatar,
     .message-avatar-spacer {
       width: 40px;
@@ -440,16 +443,16 @@
         opacity: 0.55;
         letter-spacing: 0.03em;
       }
-      .message-post {
-        display: none;
+      .user-view {
+        display: inline-flex;
+        align-items: center;
+        text-align-last: justify;
+        text-indent: 0.5px;
+        .user-avatar {
+          display: none;
+        }
       }
-    }
-    .user-view {
-      display: inline-flex;
-      align-items: center;
-      text-align-last: justify;
-      text-indent: 0.5px;
-      .user-avatar {
+      .message-post {
         display: none;
       }
     }
